[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "partehmath"
version = "0.0.2"
authors = [
  { name="PartehDev", email="parteh0754@vivaldi.net" },
]
description = "A bad numpy clone with less features"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PartehDev/PartehMath"
"Bug Tracker" = "https://github.com/PartehDev/PartehMath/issues"